[package]
name = "reinze-lib-util"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { git = "https://github.com/ryanwohara/reinze-lib-common.git", branch = "main", package = "reinze-lib-common" }
meval = { git = "https://github.com/ryanwohara/meval-rs.git", branch = "main" }
anyhow = "1.0.100"
log = "0.4"
regex = "1.12.3"
tokio = { version = "1.49.0", features = ["full"] }

[lib]
crate-type = ["dylib"]
